# litvm-tcg-oracle-mcp

./: .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  demo.py  demo_setup.sh  glama.json  pyproject.toml
src/litvm_tcg_oracle/: __init__.py  chain.py  client.py  server.py  simulate.py
tests/: test_server.py
